--- a/src/app/payment/plan-payment/plan-payment.component.scss
+++ b/src/app/payment/plan-payment/plan-payment.component.scss
@@ -1,6 +1,6 @@
 .container {
   width: 856px;
-  min-height: 610px;
+  min-height: 493px;
   box-shadow: 0 4px 4px rgba(0,0,0,0.25);
   font-family: Roboto, serif;
 
@@ -19,11 +19,33 @@
       font-size: 13px;
       padding: 0px 25px;
     }
+
+    mat-icon {
+      margin-top: -17px;
+      margin-left: auto;
+      border-radius: 50%;
+      padding: 6px;
+      font-size: 40px;
+      height: 40px;
+      width: 40px;
+      background: rgba(0, 0, 0, 0.12);
+      color: #e9a5b1;
+    }
   }
 
   .error-row-above {
+    height: 25px;
     background-color: #e02c4a;
     border-radius: 4px 4px 0 0;
+    box-shadow: 0 4px 4px rgba(0,0,0,0.25);
+  }
+
+  .registration-column-left {
+    border-radius: 4px 0 0 4px !important;
+  }
+
+  .registration-column-right {
+    border-radius: 0 4px 4px 0 !important;
     box-shadow: 0 4px 4px rgba(0,0,0,0.25);
   }
 
@@ -38,6 +60,7 @@
     }
 
     .subtitle {
+      margin-bottom: auto;
       margin-top: 6px;
       color: #2C98F0;
       font-size: 13px;
@@ -75,13 +98,13 @@
     .error-message {
       color: #D00140;
       padding-top: 10px;
-      font-size: 15px;
+      font-size: 17px;
     }
 
     .cards {
       display: flex;
-      margin-top: 12px;
-      margin-bottom: 20px;
+      margin-top: auto;
+      margin-bottom: auto;
 
       img {
         width: 64px;
@@ -97,12 +120,20 @@
       color: #4277C2;
       font-weight: 500;
       font-size: 18px;
+
+      .line {
+        margin: 0 auto;
+        height: 1px;
+        width: 95px;
+        background: #4277C2;
+      }
     }
 
     .terms {
       margin-bottom: 15px;
       color: rgba(0, 0, 0, 0.54);
       font-size: 13px;
+      margin-top: auto;
 
       .licenseagreement {
         cursor: pointer;
@@ -133,7 +164,7 @@
         display: flex;
         justify-content: space-between;
         margin-top: 14.5px;
-        margin-bottom: 15px;
+        margin-bottom: 30px;
 
         .element {
           width: calc(50% - 10px);
@@ -162,6 +193,10 @@
   .disable-pay {
     background-color: #7a7a7a !important;
   }
+
+  .details-registration {
+    margin: auto 0px;
+  }
 }
 
 .recurring-payment {
@@ -175,6 +210,11 @@
   }
 
   .below {
+
+    .cards-layout {
+      margin-top: 30px;
+      margin-bottom: 30px;
+    }
 
     .cards-recurring {
       .title {
@@ -215,7 +255,7 @@
       background-color: #f8e4e7;
 
       .title {
-        color: #7a7a7a;
+        color: #D00140;
       }
 
       button {
@@ -227,7 +267,42 @@
       }
 
       .details {
-        color: #D00140;
+        color: #DC2547;
+        margin: 0;
+        font-size: 16px;
+        line-height: 19px;
+
+        .amount {
+          font-size: 20px;
+          line-height: 23px;
+          color: #DC2547;
+        }
+      }
+
+      .horizontal-line {
+        height: 1px;
+        opacity: 0.5;
+        margin: 12px 0;
+        background: rgba(0, 0, 0, 0.12);
+      }
+
+      .amount {
+        margin-left: auto;
+      }
+
+      .fees {
+        margin: auto 0;
+
+        .fees-details {
+          color: rgba(0, 0, 0, 0.87);
+          display: flex;
+          align-items: center;
+          margin: auto 0;
+          font-weight: normal;
+          font-size: 16px;
+          line-height: 19px;
+          padding: 5px 0;
+        }
       }
     }
   }
