--- a/src/app/payment/plan-payment/plan-payment.component.html
+++ b/src/app/payment/plan-payment/plan-payment.component.html
@@ -1,8 +1,7 @@
 <div class="container" [class.recurring-payment]="isRecurringPayment">
   <div class="row above"  *ngIf="isRecurringPayment || transactionalError" [class.error-row-above]="transactionalError">
     <div class="title">{{paymentTitle() | translate}}</div>
-    <button *ngIf="isRecurringPayment" mat-button (click)="cancel()">CANCEL</button>
-    <mat-icon *ngIf="transactionalError">error_outline</mat-icon>
+    <button *ngIf="isRecurringPayment" mat-button (click)="cancel()">{{'PAYMENT_CANCEL' | translate}}</button>
   </div>
   <div class="row below">
     <div class="column left" [class.registration-column-left]="!isRecurringPayment && !transactionalError">
