Fix duplicate account check throwing backend errors.

--- a/src/app/authentication/registration/registration.component.html
+++ b/src/app/authentication/registration/registration.component.html
@@ -42,7 +42,7 @@
         <input matInput required placeholder="{{'REGISTER_FORM_LASTNAME' | translate}}" type="text" name="lastName" [(ngModel)]="lastName">
       </mat-input-container>
 
-      <mat-input-container *ngIf="activatingAccount" [class.form-error]="formInvalid && !accountName">
+      <mat-input-container *ngIf="activatingAccount" [class.error]="duplicateAccountError">
         <input matInput required placeholder="{{'REGISTER_FORM_COMPANY' | translate}}" type="text" name="company" [(ngModel)]="companyName" (keyup)="resetError()">
         <mat-hint [class.error]="duplicateAccountError">{{'REGISTER_FORM_COMPANYHINT' | translate}}</mat-hint>
       </mat-input-container>
