Fix markdown display for terms and conditions on the dashborad.

--- a/src/app/authentication/terms-and-conditions/terms-and-conditions.component.html
+++ b/src/app/authentication/terms-and-conditions/terms-and-conditions.component.html
@@ -1,7 +1,7 @@
 <div class="container">
 
   <div class="title">{{termsAndConditions.title}}</div>
-  <div class="body" Markdown>{{termsAndConditions.body}}</div>
+  <div *ngIf="termsAndConditions && termsAndConditions.body" class="body" Markdown>{{termsAndConditions.body}}</div>
 
   <div class="actions">
 
