Adjust the appearance of the logout link.

--- a/src/app/payment/payment/payment.component.scss
+++ b/src/app/payment/payment/payment.component.scss
@@ -5,6 +5,13 @@
   width: 100vw;
   height: 100vh;
   background: linear-gradient(to bottom left, #4277C2, #2C98F0);
+
+  .blue-screen__account-switcher {
+    button {
+      font-size: 16px;
+      font-weight: 500;
+    }
+  }
 }
 
 .progress {
