--- a/src/app/pages/dashboard-page/dashboard.component.html
+++ b/src/app/pages/dashboard-page/dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="dashboard-container">
+<div class="dashboard-container" *ngIf="activeDashboard===DashboardType.full">
   <div class="dashboard">
     <dashboard-header [campaigns]="campaigns"
                       [selectedCampaign]="selectedCampaign"
