Notification top bar style changes.

--- a/src/app/navigation/persistent-notifications-quick/persistent-notifications-quick.component.html
+++ b/src/app/navigation/persistent-notifications-quick/persistent-notifications-quick.component.html
@@ -1,4 +1,4 @@
-<div class="persistent-notification" *ngIf="filteredPersistentNotification">
+<div class="persistent-notification" *ngIf="filteredPersistentNotification" [class.notification]="daysTillBillingDisabled >= 0">
   <mat-icon>error_outline</mat-icon>
   <div>{{filteredPersistentNotification.body}}</div>
   <mat-icon *ngIf="filteredPersistentNotification.id" (click)="dismissPersistent(filteredPersistentNotification)">close</mat-icon>
