Separate dashboard states into sub components.

--- a/src/app/pages/dashboard-page/dashboard.component.html
+++ b/src/app/pages/dashboard-page/dashboard.component.html
@@ -1,32 +1,2 @@
-<div class="dashboard-container" *ngIf="activeDashboard===DashboardType.full">
-  <div class="dashboard">
-    <dashboard-header [campaigns]="campaigns"
-                      [selectedCampaign]="selectedCampaign"
-                      [queries]="queries"
-                      [selectedQuery]="selectedQuery"
-                      [timeFilters]="timeFilters"
-                      [quote]="quote"
-                      (campaignSelected)="selectCampaign($event)"
-                      (querySelected)="selectQuery($event)"
-                      (timeFilterSelected)="selectTimeFilter($event)">
-    </dashboard-header>
-
-    <div class="info">
-      <div>Welcome back, {{name}}</div>
-      <div>{{totalAmount.usd()}}</div>
-      <div>{{revenueMessage}}</div>
-    </div>
-
-    <dashboard-dual-graph [graphData]="data" [type]="seriesType"></dashboard-dual-graph>
-  </div>
-
-  <dashboard-issues-report [reports]="issueReports"></dashboard-issues-report>
-
-  <div class="charts-container">
-    <top-campaigns></top-campaigns>
-
-    <top-subscriptions></top-subscriptions>
-
-    <funnel-graph></funnel-graph>
-  </div>
-</div>
+<c-dashboard-setup *ngIf="activeDashboard===DashboardType.setup"></c-dashboard-setup>
+<c-dashboard-full *ngIf="activeDashboard===DashboardType.full"></c-dashboard-full>
