Update usage of translations.

--- a/src/app/pages/dashboard-page/states/setup/dashboard-setup.component.html
+++ b/src/app/pages/dashboard-page/states/setup/dashboard-setup.component.html
@@ -9,9 +9,9 @@
         </div>
 
         <div class="greeting">
-          <div>Hello, {{name}}!</div>
+          <div>{{'DASHBOARD_STATE_SETUP_HELLO' | translate}} {{name}}!</div>
           <div class="greeting__content">
-            <div>Let's get started</div>
+            <div>{{'DASHBOARD_STATE_SETUP_GETSTARTED' | translate}}</div>
             <div class="greeting__content__img">
               <svg width="23" height="49" viewBox="0 0 23 49" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <g id="Group 2">
