--- a/src/app/pages/dashboard-page/states/setup/dashboard-setup.component.scss
+++ b/src/app/pages/dashboard-page/states/setup/dashboard-setup.component.scss
@@ -4,6 +4,7 @@
   color: white;
   background: linear-gradient(180deg, #4277C2 8.44%, #2C98F0 100%);
   min-height: 100vh;
+  font-family: Roboto;
 
   &__header {
     display: flex;
