Update setup dashboard icons.

--- a/src/app/pages/dashboard-page/states/setup/dashboard-setup.component.html
+++ b/src/app/pages/dashboard-page/states/setup/dashboard-setup.component.html
@@ -35,27 +35,21 @@
         <div class="setup-container__settings__columns">
         <div class="column">
           <div class="segment">
-            <div class="icon-wrapper">
-              <mat-icon>account_circle</mat-icon>
-            </div>
+            <img src="/assets/images/dashboard/person.png">
             <div class="segment__content">
               <div class="title" [routerLink]="['/profile']">{{'DASHBOARD_STATE_SETUP_ACCOUNT_SETTINGS_TITLE' | translate}}</div>
               <div class="text">{{'DASHBOARD_STATE_SETUP_ACCOUNT_SETTINGS_DESCRIPTION' | translate}}</div>
             </div>
           </div>
           <div class="segment">
-            <div class="icon-wrapper">
-              <mat-icon>account_circle</mat-icon>
-            </div>
+            <img src="/assets/images/dashboard/group_add.png">
             <div class="segment__content">
               <div class="title" [routerLink]="['/users']">{{'DASHBOARD_STATE_SETUP_ACCOUNT_INVITEUSERS_TITLE' | translate}}</div>
               <div class="text">{{'DASHBOARD_STATE_SETUP_ACCOUNT_INVITEUSERS_DESCRIPTION' | translate}}</div>
             </div>
           </div>
           <div class="segment">
-            <div class="icon-wrapper">
-              <mat-icon>account_circle</mat-icon>
-            </div>
+            <img src="/assets/images/dashboard/attach_money.png">
             <div class="segment__content">
               <div class="title" [routerLink]="['/']">{{'DASHBOARD_STATE_SETUP_ACCOUNT_SUBSCRIPTIONS_TITLE' | translate}}</div>
               <div class="text">{{'DASHBOARD_STATE_SETUP_ACCOUNT_SUBSCRIPTIONS_DESCRIPTION' | translate}}</div>
@@ -65,36 +59,28 @@
 
         <div class="column">
           <div class="segment">
-            <div class="icon-wrapper">
-              <mat-icon>account_circle</mat-icon>
-            </div>
+            <img src="/assets/images/dashboard/local_atm.png">
             <div class="segment__content">
               <div class="title" [routerLink]="['/merchantproviders']">{{'DASHBOARD_STATE_SETUP_PROVIDERS_MERCHANT_TITLE' | translate}}</div>
               <div class="text">{{'DASHBOARD_STATE_SETUP_PROVIDERS_MERCHANT_DESCRIPTION' | translate}}</div>
             </div>
           </div>
           <div class="segment">
-            <div class="icon-wrapper">
-              <mat-icon>account_circle</mat-icon>
-            </div>
+            <img src="/assets/images/dashboard/local_shipping.png">
             <div class="segment__content">
               <div class="title" [routerLink]="['/fulfillmentproviders']">{{'DASHBOARD_STATE_SETUP_PROVIDERS_FULFILLMENT_TITLE' | translate}}</div>
               <div class="text">{{'DASHBOARD_STATE_SETUP_PROVIDERS_FULFILLMENT_DESCRIPTION' | translate}}</div>
             </div>
           </div>
           <div class="segment">
-            <div class="icon-wrapper">
-              <mat-icon>account_circle</mat-icon>
-            </div>
+            <img src="/assets/images/dashboard/mail_outline.png">
             <div class="segment__content">
               <div class="title" [routerLink]="['/smtpproviders']">{{'DASHBOARD_STATE_SETUP_PROVIDERS_SMTP_TITLE' | translate}}</div>
               <div class="text">{{'DASHBOARD_STATE_SETUP_PROVIDERS_SMTP_DESCRIPTION' | translate}}</div>
             </div>
           </div>
           <div class="segment">
-            <div class="icon-wrapper">
-              <mat-icon>account_circle</mat-icon>
-            </div>
+            <img src="/assets/images/dashboard/settings.png">
             <div class="segment__content">
               <div class="title" [routerLink]="['/documentation/graph']">{{'DASHBOARD_STATE_SETUP_PROVIDERS_API_TITLE' | translate}}</div>
               <div class="text">{{'DASHBOARD_STATE_SETUP_PROVIDERS_API_DESCRIPTION' | translate}}</div>
@@ -104,27 +90,21 @@
 
         <div class="column">
           <div class="segment">
-            <div class="icon-wrapper">
-              <mat-icon>account_circle</mat-icon>
-            </div>
+            <img src="/assets/images/dashboard/shopping_cart.png">
             <div class="segment__content">
               <div class="title" [routerLink]="['/products']">{{'DASHBOARD_STATE_SETUP_PRODUCTSANDCAMPAIGNS_PRODUCTS_TITLE' | translate}}</div>
               <div class="text">{{'DASHBOARD_STATE_SETUP_PRODUCTSANDCAMPAIGNS_PRODUCTS_DESCRIPTION' | translate}}</div>
             </div>
           </div>
           <div class="segment">
-            <div class="icon-wrapper">
-              <mat-icon>account_circle</mat-icon>
-            </div>
+            <img src="/assets/images/dashboard/date_range.png">
             <div class="segment__content">
               <div class="title" [routerLink]="['/productschedules']">{{'DASHBOARD_STATE_SETUP_PRODUCTSANDCAMPAIGNS_PRODUCTSCHEDULES_TITLE' | translate}}</div>
               <div class="text">{{'DASHBOARD_STATE_SETUP_PRODUCTSANDCAMPAIGNS_PRODUCTSCHEDULES_DESCRIPTION' | translate}}</div>
             </div>
           </div>
           <div class="segment">
-            <div class="icon-wrapper">
-              <mat-icon>account_circle</mat-icon>
-            </div>
+            <img src="/assets/images/dashboard/language.png">
             <div class="segment__content">
               <div class="title" [routerLink]="['/campaigns']">{{'DASHBOARD_STATE_SETUP_PRODUCTSANDCAMPAIGNS_CAMPAIGNS_TITLE' | translate}}</div>
               <div class="text">{{'DASHBOARD_STATE_SETUP_PRODUCTSANDCAMPAIGNS_CAMPAIGNS_DESCRIPTION' | translate}}</div>
