--- a/src/app/pages/dashboard-page/states/setup/dashboard-setup.component.scss
+++ b/src/app/pages/dashboard-page/states/setup/dashboard-setup.component.scss
@@ -84,20 +84,9 @@
           display: flex;
           margin-top: 15px;
 
-          .icon-wrapper {
-            border-radius: 50%;
-            background-color: #1EB1FC;
-            width: 32px;
-            height: 32px;
-            margin: 5px
-          }
-
-          mat-icon {
-            color: #294a78;
-            font-size: 40px;
+          img {
             width: 40px;
             height: 40px;
-            margin: -5px;
           }
 
           &__content {
