Dashboard low data component.

--- a/src/app/pages/dashboard-page/dashboard-issues-report/dashboard-issues-report.component.html
+++ b/src/app/pages/dashboard-page/dashboard-issues-report/dashboard-issues-report.component.html
@@ -1,4 +1,4 @@
-<div class="reports">
+<div class="reports" [class.background]="background">
 
   <div class="reports__item" *ngFor="let report of reports" [style.width]="100 / reports.length + '%'">
     <div class="wrapper">
