--- a/src/app/pages/dashboard-page/dashboard.component.html
+++ b/src/app/pages/dashboard-page/dashboard.component.html
@@ -1,2 +1,3 @@
 <c-dashboard-setup *ngIf="activeDashboard===DashboardType.setup"></c-dashboard-setup>
+<c-dashboard-low-data *ngIf="activeDashboard===DashboardType.low_data"></c-dashboard-low-data>
 <c-dashboard-full *ngIf="activeDashboard===DashboardType.full"></c-dashboard-full>
