--- a/src/app/pages/dashboard-page/funnel-graph/funnel-graph.component.html
+++ b/src/app/pages/dashboard-page/funnel-graph/funnel-graph.component.html
@@ -1,6 +1,6 @@
-<div inViewport (inside)="fetch()" class="dashboard__gray-table-chart">
+<div inViewport (inside)="fetch()" class="dashboard__gray-table-chart" [class.simpleChart]="simpleChart">
   <div class="dashboard__gray-table-chart__title">
-    <div class="main">{{'DASHBOARD_EVENTSFUNNEL_TITLE' | translate}}</div>
+    <div class="main" *ngIf="!simpleChart">{{'DASHBOARD_EVENTSFUNNEL_TITLE' | translate}}</div>
     <div class="event-type-options">
       <span mat-icon-button [matMenuTriggerFor]="eventTypeOptions">{{(eventTypeMap[eventType] | translate)}}</span>
       <mat-icon [matMenuTriggerFor]="eventTypeOptions">keyboard_arrow_down</mat-icon>
@@ -12,7 +12,7 @@
         <button mat-menu-item (click)="changeEventType('confirm')">{{'DASHBOARD_EVENTSFUNNEL_CONFIRM' | translate}}</button>
       </mat-menu>
     </div>
-    <mat-icon [matMenuTriggerFor]="downloadOptions">more_vert</mat-icon>
+    <mat-icon *ngIf="!simpleChart" [matMenuTriggerFor]="downloadOptions">more_vert</mat-icon>
     <mat-menu #downloadOptions="matMenu" x-position="before">
       <button mat-menu-item (click)="download('json')">{{'CHART_DOWNLOADJSON' | translate}}</button>
       <button mat-menu-item (click)="download('csv')">{{'CHART_DOWNLOADCSV' | translate}}</button>
@@ -20,7 +20,7 @@
     </mat-menu>
   </div>
 
-  <ng-container *ngIf="!serverError; else error">
+  <ng-container *ngIf="!serverError; else error" style="width: 33%">
     <chart [options]="chartOptions" (load)="saveChart($event.context)"></chart>
   </ng-container>
 
@@ -31,7 +31,7 @@
   <div *ngIf="funnel" class="table-container">
 
     <div class="column">
-      <div class="item item--title"></div>
+      <div class="item item--title" [class.first-column]="simpleChart"></div>
       <div class="item item--title">{{'DASHBOARD_EVENTSFUNNEL_CLICK' | translate}}</div>
       <div class="item item--title">{{'DASHBOARD_EVENTSFUNNEL_LEAD' | translate}}</div>
       <div class="item item--title">{{'DASHBOARD_EVENTSFUNNEL_MAIN' | translate}}</div>
@@ -40,7 +40,8 @@
     </div>
 
     <div class="column">
-      <div class="item item--title"></div>
+      <div class="item item--title" *ngIf="simpleChart" [class.first-row]="simpleChart">Number</div>
+      <div class="item item--title" *ngIf="!simpleChart"></div>
       <div class="item">{{funnel.click.count | numberlocale}}</div>
       <div class="item">{{funnel.lead.count | numberlocale}}</div>
       <div class="item">{{funnel.main.count | numberlocale}}</div>
@@ -49,15 +50,16 @@
     </div>
 
     <div class="column">
-      <div class="item item--title">% of Clicks</div>
-      <div class="item item--line"><div class="line"></div></div>
+      <div class="item item--title" [class.first-row]="simpleChart">% of Clicks</div>
+      <div class="item item--line" *ngIf="!simpleChart"><div class="line"></div></div>
+      <div class="item" *ngIf="simpleChart"></div>
       <div class="item">{{(funnel.lead.percentage | numberlocale) || '-'}}%</div>
       <div class="item">{{(funnel.main.percentage | numberlocale) || '-'}}%</div>
       <div class="item">{{(funnel.upsell.percentage | numberlocale) || '-'}}%</div>
       <div class="item">{{(funnel.confirm.percentage | numberlocale) || '-'}}%</div>
     </div>
 
-    <div class="column">
+    <div class="column" *ngIf="!simpleChart">
       <div class="item item--title">% of Sales</div>
       <div class="item item--line"><div class="line"></div></div>
       <div class="item item--line"><div class="line"></div></div>
