--- a/src/app/shared/components/coming-soon/coming-soon.component.html
+++ b/src/app/shared/components/coming-soon/coming-soon.component.html
@@ -2,7 +2,7 @@
   <div *ngIf="!inPage" (click)="navigation.back()" class="coming-soon__back-button"><mat-icon>reply</mat-icon></div>
 
   <div class="coming-soon__container">
-    <img class="coming-soon__image" src="/assets/images/logo-blue.svg">
+    <img class="coming-soon__image" src="{{'/assets/images/' + comingSoonLogo}}">
     <div class="coming-soon__text">
       <span> {{'COMINGSOON_TITLE1' | translate}} </span>
       <span> {{'COMINGSOON_TITLE2' | translate}} </span>
