Enforce input validation of merchant provider customer support URI.

--- a/src/app/pages/merchant-providers-page/merchant-provider-view/merchant-provider-add-new/merchant-provider-add-new.component.html
+++ b/src/app/pages/merchant-providers-page/merchant-provider-view/merchant-provider-add-new/merchant-provider-add-new.component.html
@@ -122,7 +122,7 @@
     <div class="entity-view__card__content merchant-provider-view__details merchant-provider-view__details--align">
 
       <mat-input-container class="entity-view__card__content__item">
-        <input [disabled]="mode === modes.View" matInput placeholder="{{'MERCHANTPROVIDER_INFO_SERVICE_URI' | translate}}" name="url" [(ngModel)]="entity.customerService.url" type="text">
+        <input [disabled]="mode === modes.View" pattern="https?://.+" matInput placeholder="{{'MERCHANTPROVIDER_INFO_SERVICE_URI' | translate}}" name="url" [(ngModel)]="entity.customerService.url" type="text">
       </mat-input-container>
 
       <mat-input-container class="entity-view__card__content__item">
