Branding: Accept invite Recursix logo

--- a/src/app/authentication/invite-accept/invite-accept.component.html
+++ b/src/app/authentication/invite-accept/invite-accept.component.html
@@ -3,7 +3,7 @@
   <div class="registration-form accept-invite__form">
 
     <div class="registration-form__header">
-      <img src="/assets/images/logo-registration.svg" alt="">
+      <img src="{{'/assets/images/' + registrationLogo}}" alt="">
     </div>
 
     <ng-container *ngIf="welcomeScreen">
