--- a/src/app/error-page/error-page.component.html
+++ b/src/app/error-page/error-page.component.html
@@ -3,7 +3,7 @@
 
   <div class="error-page">
     <div class="error-page__header">
-      <img class="error-page__header__image" src="/assets/images/sleepingHamster.svg">
+      <img class="error-page__header__image" src="{{'/assets/images/' + errorLogo}}">
       <span class="error-page__header__title"> {{'ERRORPAGE_TITLE' | translate}}</span>
     </div>
 
