--- a/src/app/pages/dashboard-page/states/setup/dashboard-setup.component.scss
+++ b/src/app/pages/dashboard-page/states/setup/dashboard-setup.component.scss
@@ -85,6 +85,7 @@
           margin-top: 15px;
 
           img {
+            min-width: 40px;
             width: 40px;
             height: 40px;
           }
